# tplink_gpl_archer_c5_v4

./: readme
BBA_1.5_platform/apps/: app.mk
BBA_1.5_platform/apps/public/usbip-0.1.7/src/cmd/: Makefile  Makefile.am  Makefile.in  stub_server.c  usbip_network.c  usbip_network.h  vhci_attach.c
BBA_1.5_platform/apps/public/usbip-0.1.7/src/cmd/.deps/: stub_server.Po  usbip_network.Po  vhci_attach.Po
BBA_1.5_platform/host_tools/: app.mk  buildDevs  buildFs  enc  makedevlinks  mkcfg  mkimage3  mkkernel  mkkernel2  unsquashfs4
BBA_1.5_platform/host_tools/buildtools/: app.mk  createShadow
BBA_1.5_platform/host_tools/fakeroot/: config.h  config.status  libtool
BBA_1.5_platform/host_tools/fsCompress/: compressJSinHtml.py  compressJsInHtml.js  doCompress.sh
BBA_1.5_platform/host_tools/genfs/: genfs  lzma  unfs
BBA_1.5_platform/host_tools/make_cfg/: app.mk
BBA_1.5_platform/host_tools/make_flash/: Makefile  app.mk  make_flash.c  make_flash.h  md5_interface.c  md5_interface.h
BBA_1.5_platform/host_tools/mkimage/: mkimage2
BBA_1.5_platform/host_tools/scripts/: app.mk
mtk_ApSoC_5020/Uboot/: C20V4_config  C5V4_autoconf_h  C5V4_config  EN020_F5V1_autoconf_h  EN020_F5V1_config  Makefile  System.map  WR850NV2_autoconf_h  WR850NV2_config  WR850NV3_autoconf_h  WR850NV3_config  autoconf.h  config.in  config.mk  u-boot  u-boot.map  u-boot.srec
mtk_ApSoC_5020/Uboot-arm/: Makefile  config.in  config.mk
mtk_ApSoC_5020/doc/: APSoC_License_List.xls
mtk_ApSoC_5020/source/: .config  Makefile  autoconf.h  config.arch  config.in
mtk_ApSoC_5020/toolchain/: README
(+3714 files in other folders)
